--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marca Mapa BR</title>
 </head>
@@ -12,11 +11,9 @@
     </header>
 
     <main>
-
         <img src="">
-        <h2>Todos os estados:</h2>
+        <script src="scripts.js"></script>
+        <h2>Lista de estados brasileiros:</h2>
     </main>
-
-    <script src="scripts.js"></script>
 </body>
 </html>
