--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marca Mapa BR</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -11,9 +12,30 @@
     </header>
 
     <main>
-        <img src="">
         <script src="scripts.js"></script>
-        <h2>Lista de estados brasileiros:</h2>
+
+        <section>
+            <aside>
+                <h2>Lista de estados brasileiros:</h2>
+                <ul class="states-list"></ul>
+            </aside>
+        </section>
+
+        <div class='my-legend'>
+            <div class='legend-scale'>
+                <ul class='legend-labels'>
+                    <li><span style='background:#89AE00;'></span>Norte</li>
+                    <li><span style='background:#7DABFD;'></span>Nordeste</li>
+                    <li><span style='background:#E6B32F;'></span>Sudeste</li>
+                    <li><span style='background:#DC8600;'></span>Sul</li>
+                    <li><span style='background:#E94335;'></span>Centro-Oeste</li>
+                </ul>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        2022
+    </footer>
 </body>
 </html>
