--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <aside class="states-box">
                 <div class="states-list">
                     <h2>Lista de estados brasileiros:</h2>
-                <ul></ul>
+                    <ul id="statesList"></ul>
                 </div>
             </aside>
         </div>      
